Freedesktop-SDK

freedesktop-sdk-19.08beta.9:
    * Fix gallium vaapi driver path (#865)
    * Remove gstreamer-vaapi (See discussion at #864)
    * Revert LLVM9 upgrade
    * Gracefully handle failed creation of openh264 decoder (#863)
    * gcc: fix libcxx python pretty printers location (#861, #590)
    * Remove ffmpeg-html5 extension: Use ffmpeg-full or the future
      openh264 extension if you only need H264 support
    * fontconfig.bst: Use 2.13.1-flatpak-lts version

freedesktop-sdk-19.08beta.8:
    * fontconfig: update to 2.13.92
    * Set all the project includes/ to a private area
    * pango: update to 1.44.6
    * librsvg: update to 2.44.15

freedesktop-sdk-19.08beta.7:
    * Fix H264 support (#858)
    * Re-add missing libLLVM-9.so to .Platform
    * Update mesa ACO extension
    * ffmpeg: Add support fot mp4 container (#856)
    * Fix gdb crashes (#842, #853)

freedesktop-sdk-19.08beta.6:
    * Add extension point for OpenH264 (#815)
    * llvm: update to 9
    * libogg.bst: update to 1.3.4 and use cmake
    * libgcrypt.bst: update to 1.8.5
    * bash.bst: update to 5.0-11
    * Remove pkg-configs from Platform

freedesktop-sdk-19.08beta.5:
    * nss: update to 3.46.0
    * nspr: update to 4.22
    * sdl2 and python3: Add dummy headers to redirect to arch-dependent ones
    * ruby: update to 2.6.4
    * cups: update to 2.3.0
    * Stop publishing native i686 flatpak runtimes
    * xorg-server.bst: Fix compilation with armv7
    * Remove cmake files from Platform
    * nano: update to 4.4
    * meson: update to 0.51.2
    * libvdpau: update to 1.3 and use meson
    * glibc: update to 2.30-2
    * Add openssl and openssh to the Platform
    * Fix xserver compilation on armv7
    * abi: Use the external ABI checker
    * General cleanup on the flatpak Platform
    * Document how to consume/extend the runtime
    * Remove static libraries when image created
    * Meson: Pass -Dauto_features=enabled by default
    * llvm: remove versioning on bst files