@@ -6,7 +6,7 @@ variables:
   GET_SOURCES_ATTEMPTS: 3
   BST_CACHE_SERVER_ADDRESS: 'freedesktop-sdk-cache.codethink.co.uk'
   RUNTIME_VERSION: '19.08'
-  STABLE_ABI: 'false'
+  STABLE_ABI: 'true'
   IMAGE_ID: '16c77002cb55091b66df200a4453ab98c76e9b76'
 
   # Docker Images
@@ -248,6 +248,7 @@ populate_source_cache:
   except:
     - master
     - '18.08'
+    - '19.08'
     - tags
   <<: *gitlab_cache_pull
 
@@ -310,6 +311,7 @@ app_powerpc64le:
       - bootstrap/${ARCH}
   except:
     - '18.08'
+    - '19.08'
     - tags
   <<: *gitlab_cache_pull
 
@@ -325,6 +327,7 @@ app_powerpc64le:
   except:
     - master
     - '18.08'
+    - '19.08'
     - tags
 
 minimal_systemd_vm_x86_64:
@@ -451,6 +454,7 @@ prepare_publish:
   only:
     - master
     - '18.08'
+    - '19.08'
     - tags
   except:
     - schedules
@@ -473,6 +477,7 @@ finish_publish:
     - tags
     - master
     - '18.08'
+    - '19.08'
   except:
     - schedules
   dependencies:
@@ -489,6 +494,7 @@ finish_publish_failed:
     - tags
     - master
     - '18.08'
+    - '19.08'
   except:
     - schedules
   when: on_failure
@@ -545,6 +551,7 @@ finish_publish_failed:
     - tags
     - master
     - '18.08'
+    - '19.08'
   except:
     - schedules
 
@@ -690,6 +697,7 @@ cve_report:
   only:
     - master
     - '18.08'
+    - '19.08'
   dependencies: []
 
 markdown_manifest:
@@ -707,6 +715,7 @@ markdown_manifest:
   only:
     - master
     - '18.08'
+    - '19.08'
   except:
     - schedules
   dependencies: []
