@@ -1,12 +1,12 @@
 {
   "app-id": "test.codecs.ffmpeg-full",
   "runtime": "org.freedesktop.Platform",
-  "runtime-version": "19.08beta",
+  "runtime-version": "19.08",
   "sdk": "org.freedesktop.Sdk",
   "add-extensions": {
     "org.freedesktop.Platform.ffmpeg-full": {
       "directory": "lib/ffmpeg",
-      "version": "19.08beta",
+      "version": "19.08",
       "add-ld-path": "."
     }
   },
